<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_apps"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/lyt_color"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="actionMenu"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/setting_color"
                    android:textSize="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_more" />

            </LinearLayout>

            <View
                android:id="@+id/View02"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey_divider" />

            <LinearLayout
                android:id="@+id/lyt_rate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="actionMenu"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/setting_rate_app"
                    android:textSize="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_more" />

            </LinearLayout>

            <View
                android:id="@+id/View04"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/grey_divider" />

            <LinearLayout
                android:id="@+id/lyt_about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="actionMenu"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="14dp"
                    android:text="@string/setting_about_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right_more" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_soft"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>